# surrealdb-docker-template

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml
src/: main.rs
