[package]
name = "surrealdb-docker-template"
version = "0.1.0"
edition = "2021"

[dependencies]
surrealdb = { version = "1.5.4", optional = true }
cfg-if = "1.0.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
once_cell = "1.20.1"

[features]
database = ["dep:surrealdb", "surrealdb?/kv-rocksdb", "surrealdb?/kv-mem"]
memdatabase = ["surrealdb/kv-mem", "database"]
filedatabase = ["surrealdb/kv-rocksdb", "database"]
