[package]
name = "surrealdb-docker-template"
version = "0.1.0"
edition = "2021"

[dependencies]
surrealdb = { version = "2.0.2", optional = true, default-features = false, features = [
    "protocol-ws",
] }
cfg-if = "1.0.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
once_cell = "1.20.1"

[features]
database = ["surrealdb/protocol-ws", "surrealdb/rustls"]
memdatabase = ["surrealdb/kv-mem"]
filedatabase = ["surrealdb/kv-rocksdb"]
